installed dev dependece packages

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5",
+    "supertest": "^6.1.6"
   }
 }
