--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/monzersmiledev/alimny-statup#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
