--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "jest": "^27.4.5",
