--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
