--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.3",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.7.2"
