--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node server.js",
-    "debug" : "node --inspect server.js"
+    "debug": "node --inspect server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "helmet": "^5.0.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
