--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         
         {
-            "command": "npm start",
+            "command": "npm run debug",
             "name": "Run npm start",
             "request": "launch",
             "type": "node-terminal"
