--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/monzersmiledev/alimny-statup#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -36,6 +36,8 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
     "node-cache": "^5.1.2",
+    "node-gyp": "^8.4.1",
+    "node-pre-gyp": "^0.17.0",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
