--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
-    "start": "node server.js",
+    "start": "node ./src/app.js",
+    "dev": "env-cmd -f ./src/config/dev.env node ./src/app.js",
+    "test": "env-cmd -f ./src/config/test.env jest --watch",
     "debug": "node --inspect server.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -28,8 +32,11 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
+    "express-validation": "^3.0.8",
+    "express-validator": "^6.14.0",
     "helmet": "^5.0.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
@@ -38,7 +45,9 @@
     "node-cache": "^5.1.2",
     "node-gyp": "^8.4.1",
     "node-pre-gyp": "^0.17.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.15.0"
   },
   "devDependencies": {
     "jest": "^27.4.7",
