--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-pre-gyp": "^0.17.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "pdfkit": "^0.13.0",
     "sequelize": "^6.15.0"
   },
   "devDependencies": {
